--- a/Agent_for_cybersecurity.ipynb
+++ b/Agent_for_cybersecurity.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4s9v7qdrCI81l4cCmA3sT",
+      "authorship_tag": "ABX9TyPGqaYtTj8dGQ3L9KqPpXKD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -266,9 +266,9 @@
         "        input_array[:len(features)] = features\n",
         "        prediction = model.predict([input_array])[0]\n",
         "        if prediction == 1:\n",
-        "            print(f\"⚠️ Alert: Potential attack detected from {packet[IP].src}\")\n",
+        "            print(f\" Alert: Potential attack detected from {packet[IP].src}\")\n",
         "        else:\n",
-        "            print(f\"✅ Normal packet from {packet[IP].src}\")\n",
+        "            print(f\"Normal packet from {packet[IP].src}\")\n",
         "\n",
         "# Start sniffing (you can set a count limit for testing)\n",
         "sniff(prn=process_packet, store=False, count=10)\n"
